# srcfinder

./: .gitattributes  .gitignore
cnn/: Dockerfile  README.md  environment.yml  environment_cpu_lite.yml  environment_gpu_lite.yml  fcn_mem_test.py  fcn_pad.py  fcn_pred_pipeline.py  naive_pred_pipeline.py  predict_flightline_clsfcn.py  predict_flightline_unet_upnet.py  tile_ensemble_pipeline.py  tile_pred_pipeline.py  train_cls.py  train_unet_upnet.py
cnn/archs/: googlenetAA.py  unet.py  upernet.py  xception.py
cnn/cmutils-pkg/: pyproject.toml
cnn/cmutils-pkg/cmutils/: __init__.py  dsmeta.py  fcn.py  utils.py
cnn/cmutils/cmutils/: pytorch.py
cnn/cmutils/cmutils/cli/: duptiles_by_ptype.py  (+1 more)
cnn/labels/: COVID_QC_no_overlap_test_abspath_g3k.csv  COVID_QC_no_overlap_train_abspath_g3k.csv  CalCH4_v8_no_overlap_test_abspath_g3k.csv  CalCH4_v8_no_overlap_train_abspath_g3k.csv  Permian_QC_test_abspath_g3k.csv  Permian_QC_train_abspath_g3k.csv  gao_carb_2020_test_abspath_g3k.csv  gao_carb_2020_train_abspath_g3k.csv  test_abspath_g3k.csv  test_abspath_g3k_ca_only.csv  train_abspath_g3k_ca_only.csv
cnn/models/: COVID_QC.pt  CalCH4_v8.pt  CalCh4_v8+COVID_QC+Permian_QC.pt  Permian_QC.pt  multi_256AA.pt  multicampaign_deepunet.pt  multicampaign_upernet.pt
cnn/samples/: ang20200924t211102_ch4mf_v2y1_img  ang20200924t211102_ch4mf_v2y1_img.hdr  ang20200924t211102_ch4mf_v2y1_img_CalCh4_v8+COVID_QC+Permian_QC_AA_saliency_pad256.hdr  ang20200924t211102_ch4mf_v2y1_img_CalCh4_v8+COVID_QC+Permian_QC_AA_saliency_pad256.img  (+1 more)
triage/: README.md  high_bge.py  run_triage_scripts.py
